--- a/resources/assets/sass/sites/altijdsex-nl/scaffolding.scss
+++ b/resources/assets/sass/sites/altijdsex-nl/scaffolding.scss
@@ -64,3 +64,38 @@ img {
     color: #6c757d;
 }
 
+.col-xs-5ths,
+.col-sm-5ths,
+.col-md-5ths,
+.col-lg-5ths {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.col-xs-5ths {
+    width: 20%;
+    float: left;
+}
+
+@media (min-width: $screen-sm-min) {
+    .col-sm-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: $screen-md-min) {
+    .col-md-5ths {
+        width: 20% !important;
+        float: left;
+    }
+}
+
+@media (min-width: $screen-lg-min) {
+    .col-lg-5ths {
+        width: 20%;
+        float: left;
+    }
+}
