--- a/resources/assets/sass/admin/custom.scss
+++ b/resources/assets/sass/admin/custom.scss
@@ -2,6 +2,6 @@
 
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
 
-@import "../altijdsex-nl-variables";
+@import "../datevrij-nl-variables";
 @import "../variables";
-@import "../components/sites/altijdsex-nl/public-chat";
+@import "../components/sites/datevrij-nl/public-chat";
