--- a/resources/assets/sass/views/sites/altijdsex-nl/credits.scss
+++ b/resources/assets/sass/views/sites/altijdsex-nl/credits.scss
@@ -28,7 +28,7 @@ Table of Contents End
 
 @import "../../../variables";
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
-@import "../../../altijdsex-nl-variables";
+@import "../../../datevrij-nl-variables";
 
 .credits-page-content {
     .paymentMethodsList {
